Изменил файловую структуру на Flat

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,3 +8,8 @@ $button-color: #47474C;
 $notice-color: #25E197;
 $decor-color: #FFD233;
 $line-color: #151515;
+
+// Ширина
+$width: 100%;
+$main-width: 1440px;
+$section-width: 1120px;
