--- a/pages/index.css
+++ b/pages/index.css
@@ -352,3 +352,15 @@ template {
 [hidden] {
   display: none;
 }
+
+.body {
+  background-color: #000000;
+  margin: 0;
+}
+
+.page {
+  max-width: 1440px;
+  margin: 0 auto;
+  font-family: "Roboto";
+  color: #FFFFFF;
+}
