--- a/pages/index.css
+++ b/pages/index.css
@@ -361,6 +361,39 @@ template {
 .page {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 60px 0;
   font-family: "Roboto";
   color: #FFFFFF;
+}
+
+.logo {
+  margin: 0;
+  font-size: 22px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+}
+.logo__notice {
+  font-size: 12px;
+  line-height: 12px;
+  margin-left: 20px;
+  padding: 4px 8px;
+  background-color: #25E197;
+  border-radius: 4px;
+  color: #000000;
+}
+
+.header {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+.header__title {
+  margin: 60px 0 20px;
+  font-size: 112px;
+  line-height: 112px;
+}
+.header__subtitle {
+  margin: 0 0 230px;
+  font-size: 80px;
+  line-height: 70px;
 }
