--- a/pages/index.scss
+++ b/pages/index.scss
@@ -5,3 +5,7 @@
 
 @import '../scss/blocks/body';
 @import '../scss/blocks/page';
+
+@import '../scss/blocks/logo';
+
+@import '../scss/blocks/header'
