--- a/scss/blocks/_page.scss
+++ b/scss/blocks/_page.scss
@@ -1,6 +1,7 @@
 .page {
     max-width: $main-width;
     margin: 0 auto;
+    padding: 60px 0;
     font-family: 'Roboto';
     color: $title-color;
 }
