--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -6,6 +6,7 @@
         margin: 60px 0 20px;
         font-size: 112px;
         line-height: 112px;
+        font-weight: normal;
     }
 
     &__subtitle {
