--- a/pages/index.css
+++ b/pages/index.css
@@ -398,3 +398,51 @@ template {
   font-size: 80px;
   line-height: 70px;
 }
+
+.repair-request {
+  max-width: 1120px;
+  margin: 0 auto;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+}
+.form__input {
+  border: none;
+  box-sizing: border-box;
+  padding: 13px 16px;
+  width: 100%;
+  height: 50px;
+  outline: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 24px;
+  background-color: rgba(142, 142, 152, 0.2);
+  border-radius: 8px 0px 0px 8px;
+  letter-spacing: 0.375px;
+  max-width: 348px;
+  transition: all 0.2s linear;
+}
+.form__input:hover {
+  background-color: rgba(142, 142, 152, 0.3);
+}
+.form__button {
+  border: none;
+  box-sizing: border-box;
+  padding: 13px 16px;
+  width: 100%;
+  height: 50px;
+  outline: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 24px;
+  background: #47474C;
+  border-radius: 0px 8px 8px 0px;
+  letter-spacing: 0.4px;
+  max-width: 221px;
+  text-align: center;
+}
+.form__button:hover {
+  cursor: pointer;
+}
