Добавил секцию с галлереей

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,4 +12,5 @@ $line-color: #151515;
 // Ширина
 $width: 100%;
 $main-width: 1440px;
-$section-width: 1120px;
+$section-width: 1240px;
+$section-padding: 0 60px;
