--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,6 +1,7 @@
 .header {
     max-width: $section-width;
     margin: 0 auto;
+    padding: $section-padding;
 
     &__title {
         margin: 60px 0 20px;
