--- a/pages/index.css
+++ b/pages/index.css
@@ -384,8 +384,9 @@ template {
 }
 
 .header {
-  max-width: 1120px;
+  max-width: 1240px;
   margin: 0 auto;
+  padding: 0 60px;
 }
 .header__title {
   margin: 60px 0 20px;
@@ -400,8 +401,9 @@ template {
 }
 
 .repair-request {
-  max-width: 1120px;
+  max-width: 1240px;
   margin: 0 auto 60px;
+  padding: 0 60px;
 }
 
 .form {
@@ -453,4 +455,47 @@ template {
   line-height: 18px;
   color: #47474C;
   margin: 10px;
+}
+
+@media (max-width: 768px) {
+  .form__input {
+    max-width: calc(100% - 221px);
+  }
+}
+.gallery {
+  padding: 60px 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.gallery__img-1 {
+  border-radius: 15px;
+}
+.gallery__img-2 {
+  border-radius: 15px;
+}
+.gallery__block-1 {
+  width: calc(100% - 468px);
+  background-color: #FFD233;
+  border-radius: 15px;
+}
+.gallery__block-2 {
+  width: calc(100% - 750px);
+  background-color: #25E197;
+  border-radius: 15px;
+}
+
+@media (max-width: 1024px) {
+  .gallery__img-2 {
+    max-width: 455px;
+  }
+  .gallery__block-2 {
+    width: calc(100% - 475px);
+    min-height: 344px;
+  }
+}
+@media (max-width: 768px) {
+  .gallery {
+    padding: 20px 60px 60px;
+  }
 }
