Добавлена секция с карточками услуг

--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -4,6 +4,7 @@
     padding: 60px;
 
     &__text {
+        margin: 0;
         font-size: 32px;
         line-height: 40px;
         color: $text-color;
