--- a/pages/index.css
+++ b/pages/index.css
@@ -505,7 +505,57 @@ template {
   padding: 60px;
 }
 .description__text {
+  margin: 0;
   font-size: 32px;
   line-height: 40px;
   color: #8E8E98;
+}
+
+.services {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 60px 60px;
+}
+.services__title {
+  margin: 0;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 40px;
+  margin-bottom: 120px;
+}
+.services__cards {
+  display: flex;
+  gap: 20px;
+}
+.services__card {
+  color: #FFFFFF;
+  width: 100%;
+  max-width: 550px;
+  background: #1C1C1E;
+  border-radius: 16px;
+  padding: 40px;
+}
+.services__label {
+  margin: 0 0 20px;
+  font-size: 18px;
+  line-height: 18px;
+  color: #8E8E98;
+}
+.services__heading {
+  margin: 0 0 40px;
+  font-size: 32px;
+  line-height: 32px;
+  font-weight: normal;
+}
+.services__text {
+  margin: 0 0 40px;
+  font-size: 32px;
+  line-height: 40px;
+  color: #8E8E98;
+}
+.services__price {
+  margin: 0;
+  font-size: 14px;
+  line-height: 14px;
+  color: #25E197;
 }
