--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -1,4 +1,5 @@
 .services {
+    box-sizing: border-box;
     max-width: $section-width;
     margin: 0 auto;
     padding: 0 60px 60px;
@@ -17,12 +18,19 @@
     }
 
     &__card {
+        box-sizing: border-box;
         color: $title-color;
         width: 100%;
         max-width: 550px;
         background: $card-bg-color;
         border-radius: 16px;
         padding: 40px;
+        transition: all .2s linear;
+
+        &:hover {
+            background-color: $card-bg-hover-color;
+            cursor: pointer;
+        }
     }
 
     &__label {
