Desktop версия первая

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -21,3 +21,7 @@
 @import '../scss/blocks/services';
 
 @import '../scss/blocks/guarantee';
+
+@import '../scss/blocks/support';
+
+@import '../scss/blocks/footer';
