--- a/pages/index.css
+++ b/pages/index.css
@@ -382,6 +382,9 @@ template {
   border-radius: 4px;
   color: #000000;
 }
+.logo_footer {
+  margin-bottom: 84px;
+}
 
 .header {
   max-width: 1240px;
@@ -454,7 +457,10 @@ template {
   font-size: 12px;
   line-height: 18px;
   color: #47474C;
-  margin: 10px;
+  margin: 12px;
+}
+.form__label_footer {
+  margin: 18px 0 0;
 }
 
 @media (max-width: 768px) {
@@ -609,4 +615,56 @@ template {
   font-size: 15px;
   line-height: 19px;
   color: #8E8E98;
+}
+
+.support {
+  box-sizing: border-box;
+  max-width: 1240px;
+  margin: 0 auto 180px;
+  padding: 60px;
+}
+.support__title {
+  margin: 0 0 90px;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 40px;
+}
+.support__button {
+  background: #47474C;
+  border-radius: 8px;
+  padding: 13px 30px;
+  margin-bottom: 50px;
+  border: none;
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.375px;
+}
+.support__button:hover {
+  cursor: pointer;
+}
+.support__text {
+  margin: 0;
+  font-size: 32px;
+  line-height: 40px;
+  color: #8E8E98;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 60px 60px 42px;
+  border-top: 2px solid #151515;
+}
+.footer__copyright {
+  margin: 0;
+  align-self: flex-end;
+  font-size: 12px;
+  line-height: 18px;
+  color: #47474C;
+  transform: translateY(-18px);
 }
