--- a/scss/blocks/_repair-request.scss
+++ b/scss/blocks/_repair-request.scss
@@ -1,5 +1,6 @@
 .repair-request {
+    box-sizing: border-box;
     max-width: $section-width;
-    margin: 0 auto 60px;
+    margin: 0 auto 50px;
     padding: $section-padding;
 }
