--- a/pages/index.css
+++ b/pages/index.css
@@ -387,6 +387,7 @@ template {
 }
 
 .header {
+  box-sizing: border-box;
   max-width: 1240px;
   margin: 0 auto;
   padding: 0 60px;
@@ -404,8 +405,9 @@ template {
 }
 
 .repair-request {
+  box-sizing: border-box;
   max-width: 1240px;
-  margin: 0 auto 60px;
+  margin: 0 auto 50px;
   padding: 0 60px;
 }
 
