--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -11,3 +11,13 @@
         color: $text-color;
     }
 }
+
+@media (max-width: 1024px) {
+    .description {
+    
+        &__text {
+            font-size: 20px;
+            line-height: 30px;
+        }
+    }
+}
