--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -16,3 +16,13 @@
         transform: translateY(-18px);
     }
 }
+
+@media (max-width: 1024px) {
+    .footer {
+        &__copyright {
+            margin-top: 60px;
+            align-self: flex-start;
+            transform: none;
+        }
+    }
+}
