--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -19,3 +19,10 @@
         margin-bottom: 84px;
     }
 }
+
+@media (max-width: 767px) {
+    .logo {
+        font-size: 20px;
+        line-height: 28px;
+    }
+}
