--- a/scss/blocks/_support.scss
+++ b/scss/blocks/_support.scss
@@ -35,3 +35,24 @@
         color: $text-color;
     }
 }
+
+@media (max-width: 768px) {
+    .support {
+        margin-bottom: 150px;
+
+        &__title {
+            margin-bottom: 80px;
+            font-size: 20px;
+            line-height: 30px;
+        }
+
+        &__button {
+            margin-bottom: 40px;
+        }
+
+        &__text {
+            font-size: 20px;
+            line-height: 30px;
+        }
+    }
+}
