--- a/scss/blocks/_description.scss
+++ b/scss/blocks/_description.scss
@@ -21,3 +21,22 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .description {
+        padding: 40px 20px 20px;
+        &__text {
+            font-size: 16px;
+            line-height: 24px;
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .description {
+        &__text {
+            font-size: 12px;
+            line-height: 18px;
+        }
+    }
+}
