--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -43,7 +43,7 @@
         &__title {
             font-size: 50px;
             line-height: 60px;
-            margin: 70px 0 0;
+            margin: 60px 0 10px;
         }
     
         &__subtitle {
