--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -24,5 +24,14 @@
     .logo {
         font-size: 20px;
         line-height: 28px;
+
+        &__notice {
+            margin-left: 12px;
+        }
+
+        &_footer {
+            margin-bottom: 184px;
+        }
     }
+
 }
