--- a/scss/blocks/_repair-request.scss
+++ b/scss/blocks/_repair-request.scss
@@ -14,5 +14,6 @@
 @media (max-width: 767px) {
     .repair-request {
         padding: $section-padding-mobile;
+        margin-bottom: 0;
     }
 }
