Добавлен скрипт для форм

--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -24,6 +24,7 @@
         letter-spacing: 0.4px;
         max-width: 221px;
         text-align: center;
+        overflow: hidden;
 
         &:hover {
             cursor: pointer;
