--- a/pages/index.css
+++ b/pages/index.css
@@ -475,7 +475,7 @@ template {
 .form__input {
   border: none;
   box-sizing: border-box;
-  padding: 13px 16px;
+  padding: 13px 15px;
   width: 100%;
   height: 50px;
   outline: none;
@@ -494,7 +494,7 @@ template {
 .form__button {
   border: none;
   box-sizing: border-box;
-  padding: 13px 16px;
+  padding: 13px 15px;
   width: 100%;
   height: 50px;
   outline: none;
@@ -506,6 +506,7 @@ template {
   letter-spacing: 0.4px;
   max-width: 221px;
   text-align: center;
+  overflow: hidden;
 }
 .form__button:hover {
   cursor: pointer;
