--- a/scss/blocks/_page.scss
+++ b/scss/blocks/_page.scss
@@ -2,7 +2,7 @@
     max-width: $main-width;
     margin: 0 auto;
     padding: 60px 0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', 'Arial', sans-serif;
     color: $title-color;
 }
 
