--- a/pages/index.css
+++ b/pages/index.css
@@ -362,7 +362,7 @@ template {
   max-width: 1440px;
   margin: 0 auto;
   padding: 60px 0;
-  font-family: "Roboto";
+  font-family: "Roboto", "Arial", sans-serif;
   color: #FFFFFF;
 }
 
