--- a/scss/blocks/_support.scss
+++ b/scss/blocks/_support.scss
@@ -22,9 +22,11 @@
         line-height: 24px;
         text-align: center;
         letter-spacing: 0.375px;
+        transition: all .2s linear;
 
         &:hover {
             cursor: pointer;
+            opacity: .8;
         }
     }
 
