Перенес заголовок H1 из header в main

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -11,6 +11,8 @@
 
 @import '../scss/blocks/header';
 
+@import '../scss/blocks/main';
+
 @import '../scss/blocks/repair-request';
 @import '../scss/blocks/form';
 
