--- a/pages/index.css
+++ b/pages/index.css
@@ -409,43 +409,54 @@ template {
   margin: 0 auto;
   padding: 0 60px;
 }
-.header__title {
-  margin: 60px 0 20px;
+
+@media (max-width: 767px) {
+  .header {
+    padding: 0 20px;
+  }
+}
+.main__title {
+  box-sizing: border-box;
+  max-width: 1240px;
+  padding: 0 60px;
+  margin: 60px auto 20px;
   font-size: 112px;
   line-height: 112px;
   font-weight: normal;
 }
-.header__subtitle {
-  margin: 0 0 230px;
+.main__subtitle {
+  box-sizing: border-box;
+  max-width: 1240px;
+  padding: 0 60px;
+  margin: 0 auto 230px;
   font-size: 80px;
   line-height: 70px;
 }
 
 @media (max-width: 1179px) {
-  .header__title {
+  .main__title {
     font-size: 70px;
     line-height: 90px;
     margin: 70px 0 0;
   }
-  .header__subtitle {
+  .main__subtitle {
     margin-bottom: 470px;
     font-size: 49px;
     line-height: 60px;
   }
 }
 @media (max-width: 767px) {
-  .header {
-    padding: 0 20px;
-  }
-  .header__title {
+  .main__title {
     font-size: 50px;
     line-height: 60px;
     margin: 60px 0 10px;
+    padding: 0 20px;
   }
-  .header__subtitle {
+  .main__subtitle {
     margin-bottom: 260px;
     font-size: 30px;
     line-height: 38px;
+    padding: 0 20px;
   }
 }
 .repair-request {
