--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -39,8 +39,12 @@
         color: $button-color;
         margin: 12px;
 
-        &_footer {
-            margin: 18px 0 0;
+        &_place {
+
+            &_footer {
+                margin: 18px 0 0;
+            }
+            
         }
     }
 
