--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -4,19 +4,32 @@
     line-height: 30px;
     display: flex;
     align-items: center;
+    margin-left: 4px;
     
     &__notice {
         font-size: 12px;
         line-height: 12px;
-        margin-left: 20px;
+        margin-left: 18px;
         padding: 4px 8px;
         background-color: #25E197;
         border-radius: 4px;
         color: $main-bg-color;
     }
 
-    &_footer {
-        margin-bottom: 84px;
+    &_place {
+
+        &_footer {
+            margin-left: 0;
+            margin-bottom: 84px;
+        }
+
+    }
+
+}
+
+@media (max-width: 1023px) {
+    .logo {
+        margin-left: 0;
     }
 }
 
@@ -29,8 +42,12 @@
             margin-left: 12px;
         }
 
-        &_footer {
-            margin-bottom: 184px;
+        &_place {
+
+            &_footer {
+                margin-bottom: 184px;
+            }
+
         }
     }
 
