Исправил классы gallery и добавил модификаторы

--- a/scss/blocks/_gallery.scss
+++ b/scss/blocks/_gallery.scss
@@ -4,41 +4,59 @@
     flex-wrap: wrap;
     gap: 20px;
 
-    &__img-first {
+    &__img {
         border-radius: 10px;
     }
 
-    &__img-last {
+    &__block {
         border-radius: 10px;
+
+        &_position {
+
+            &_first {
+                width: calc(100% - 468px);
+                background-color: $decor-color;
+            }
+
+            &_last {
+                width: calc(100% - 750px);
+                background-color: $notice-color;
+            }
+
+        }
     }
 
-    &__block-first {
-        width: calc(100% - 468px);
-        background-color: $decor-color;
-        border-radius: 10px;
-    }
-
-    &__block-last {
-        width: calc(100% - 750px);
-        background-color: $notice-color;
-        border-radius: 10px;
-    }
 }
 
 @media (max-width: 1024px) {
     
     .gallery {
-
         padding: 20px 60px 60px;
-        
-        &__img-last {
-            max-width: 455px;
+
+        &__img {
+
+            &_position {
+                
+                &_last {
+                    max-width: 455px;
+                }
+
+            }
+
+        }
+
+        &__block {
+
+            &_position {
+
+                &_last {
+                    width: calc(100% - 475px);
+                    min-height: 344px;
+                }
+
+            }
         }
     
-        &__block-last {
-            width: calc(100% - 475px);
-            min-height: 344px;
-        }
     }
 }
 
@@ -47,27 +65,35 @@
     .gallery {
         padding: 40px 20px 20px;
 
-        &__img-first {
+        &__img {
             width: 100%;
-            // border-radius: 7px;
+
+            &_position {
+                
+                &_last {
+                    max-width: none;
+                }
+
+            }
+
         }
-    
-        &__img-last {
+
+        &__block {
             width: 100%;
-            max-width: none;
-            // border-radius: 7px;
-        }
-    
-        &__block-first {
-            width: 100%;
-            min-height: 67px;
             border-radius: 4px;
+
+            &_position {
+
+                &_first {
+                    min-height: 67px;
+                }
+
+                &_last {
+                    min-height: 124px;
+                }
+
+            }
         }
     
-        &__block-last {
-            width: 100%;
-            min-height: 124px;
-            border-radius: 4px;
-        }
     }
 }
