--- a/pages/index.css
+++ b/pages/index.css
@@ -574,31 +574,29 @@ template {
   flex-wrap: wrap;
   gap: 20px;
 }
-.gallery__img-first {
+.gallery__img {
   border-radius: 10px;
 }
-.gallery__img-last {
+.gallery__block {
   border-radius: 10px;
 }
-.gallery__block-first {
+.gallery__block_position_first {
   width: calc(100% - 468px);
   background-color: #FFD233;
-  border-radius: 10px;
 }
-.gallery__block-last {
+.gallery__block_position_last {
   width: calc(100% - 750px);
   background-color: #25E197;
-  border-radius: 10px;
 }
 
 @media (max-width: 1024px) {
   .gallery {
     padding: 20px 60px 60px;
   }
-  .gallery__img-last {
+  .gallery__img_position_last {
     max-width: 455px;
   }
-  .gallery__block-last {
+  .gallery__block_position_last {
     width: calc(100% - 475px);
     min-height: 344px;
   }
@@ -607,22 +605,21 @@ template {
   .gallery {
     padding: 40px 20px 20px;
   }
-  .gallery__img-first {
+  .gallery__img {
     width: 100%;
   }
-  .gallery__img-last {
-    width: 100%;
+  .gallery__img_position_last {
     max-width: none;
   }
-  .gallery__block-first {
+  .gallery__block {
     width: 100%;
-    min-height: 67px;
     border-radius: 4px;
   }
-  .gallery__block-last {
-    width: 100%;
+  .gallery__block_position_first {
+    min-height: 67px;
+  }
+  .gallery__block_position_last {
     min-height: 124px;
-    border-radius: 4px;
   }
 }
 .description {
